- added figure spawn